@@ -75,12 +75,12 @@ public class RemoveDefaultBatchConfigurer extends Recipe {
 
                 // Strip calls to super()
                 md = md.withBody(md.getBody().withStatements(ListUtils.map(md.getBody().getStatements(),
-                        s -> (s instanceof J.MethodInvocation && "super".equals(((J.MethodInvocation) s).getSimpleName())) ? null : s)));
+                        s -> (s instanceof J.MethodInvocation mi && "super".equals(mi.getSimpleName())) ? null : s)));
 
                 // Strip calls to super.*()
                 md = md.withBody(md.getBody().withStatements(ListUtils.map(md.getBody().getStatements(),
-                        s -> (s instanceof J.MethodInvocation && ((J.MethodInvocation) s).getSelect() instanceof J.Identifier &&
-                              "super".equals(((J.Identifier) ((J.MethodInvocation) s).getSelect()).getSimpleName())) ? null : s)));
+                        s -> (s instanceof J.MethodInvocation mi && mi.getSelect() instanceof J.Identifier &&
+                              "super".equals(((J.Identifier) mi.getSelect()).getSimpleName())) ? null : s)));
 
                 // Strip (now) empty methods
                 if (md.getBody().getStatements().isEmpty()) {
@@ -91,9 +91,9 @@ public class RemoveDefaultBatchConfigurer extends Recipe {
             // Strip calls to new DefaultBatchConfigurer()
             List<Statement> statements = md.getBody().getStatements();
             if (statements.size() == 1
-                && statements.get(0) instanceof J.Return
+                && statements.getFirst() instanceof J.Return
                 && new MethodMatcher(DEFAULT_BATCH_CONFIGURER + " <constructor>(..)")
-                        .matches(((J.Return) statements.get(0)).getExpression())) {
+                        .matches(((J.Return) statements.getFirst()).getExpression())) {
                 maybeRemoveImport(BATCH_CONFIGURER);
                 maybeRemoveImport(DEFAULT_BATCH_CONFIGURER);
                 return null;
